--- a/config/database.yml
+++ b/config/database.yml
@@ -1,18 +1,17 @@
 development:
-  adapter: mysql2
+  adapter: postgresql
   database: feast20013_dev
   pool: 5
   timeout: 5000
 
 test:
-  adapter: mysql2
+  adapter: postgresql
   database: feast20013_test
   pool: 5
   timeout: 5000
 
 production:
-  adapter: mysql2
-  #adapter: postgresql
+  adapter: postgresql
   database: feast20013
   pool: 5
   timeout: 5000
